minor alignment fix

--- a/screens/forms/mycss.css
+++ b/screens/forms/mycss.css
@@ -157,3 +157,7 @@
     height:291px;
     display: none;
   }
+
+  #dis1{
+    margin: 20px auto 40px;
+  }
